lutra-sql/src/main/java/io/lutra/parser/ddl/DdlLangRuleParser.java
// Generated from C:/workspace/lutradb/lutra-sql/src/main/resources/antlr4\DdlLangRule.g4 by ANTLR 4.8
package io.lutra.parser.ddl;
import io.lutra.visitor.ddl.DdlLangRuleVisitor;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DdlLangRuleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ADD=1, ALL=2, ALTER=3, ALWAYS=4, ANALYZE=5, AND=6, ANY=7, AS=8, ASC=9, 
		AUTO_INCREMENT=10, BEFORE=11, BETWEEN=12, BOTH=13, BTREE=14, BY=15, CALL=16, 
		CASCADE=17, CASE=18, CAST=19, CHANGE=20, CHARACTER=21, CHECK=22, COLLATE=23, 
		COLUMN=24, CONDITION=25, CONSTRAINT=26, CONTINUE=27, CONVERT=28, CREATE=29, 
		CROSS=30, CURRENT_USER=31, CURSOR=32, DATABASE=33, DATABASES=34, DECLARE=35, 
		DEFAULT=36, DELAYED=37, DELETE=38, DESC=39, DESCRIBE=40, DETERMINISTIC=41, 
		DISTINCT=42, DISTINCTROW=43, DROP=44, EACH=45, ELSE=46, ELSEIF=47, ENCLOSED=48, 
		ESCAPED=49, EXISTS=50, EXIT=51, EXPLAIN=52, FALSE=53, FETCH=54, FOR=55, 
		FORCE=56, FOREIGN=57, FROM=58, FULLTEXT=59, GENERATED=60, GRANT=61, GROUP=62, 
		HAVING=63, HIGH_PRIORITY=64, IF=65, IGNORE=66, IN=67, INDEX=68, INFILE=69, 
		INNER=70, INOUT=71, INSERT=72, INTERVAL=73, INTO=74, IS=75, ITERATE=76, 
		JOIN=77, KEY=78, KEYS=79, KILL=80, LEADING=81, LEAVE=82, LEFT=83, LIKE=84, 
		LIMIT=85, LINEAR=86, LINES=87, LOAD=88, LOCK=89, LOOP=90, LOW_PRIORITY=91, 
		MASTER_BIND=92, MASTER_SSL_VERIFY_SERVER_CERT=93, MATCH=94, MAXVALUE=95, 
		MODIFIES=96, NATURAL=97, NOT=98, NULL=99, ON=100, OPTIMIZE=101, OPTION=102, 
		OPTIONALLY=103, OR=104, ORDER=105, OUT=106, OUTER=107, OUTFILE=108, PARTITION=109, 
		PRIMARY=110, PROCEDURE=111, PURGE=112, RANGE=113, READ=114, READS=115, 
		REFERENCES=116, REGEXP=117, RELEASE=118, RENAME=119, REPEAT=120, REPLACE=121, 
		REQUIRE=122, RESTRICT=123, RETURN=124, REVOKE=125, RIGHT=126, RLIKE=127, 
		SCHEMA=128, SCHEMAS=129, SELECT=130, SET=131, SEPARATOR=132, SHOW=133, 
		SPATIAL=134, SQL=135, TABLE=136, TERMINATED=137, THEN=138, TO=139, TRAILING=140, 
		TRIGGER=141, TRUE=142, TRUNCATE=143, UNDO=144, UNION=145, UNIQUE=146, 
		UNLOCK=147, UNSIGNED=148, UPDATE=149, USAGE=150, USE=151, USING=152, VALUES=153, 
		WHEN=154, WHERE=155, WHILE=156, WITH=157, WRITE=158, XOR=159, ZEROFILL=160, 
		MAX=161, MIN=162, COUNT=163, SUM=164, AVG=165, PERCENT=166, UNDER_LINE=167, 
		TINYINT=168, SMALLINT=169, MEDIUMINT=170, INT=171, INTEGER=172, BIGINT=173, 
		REAL=174, DOUBLE=175, PRECISION=176, FLOAT=177, DECIMAL=178, DEC=179, 
		NUMERIC=180, DATE=181, TIME=182, TIMESTAMP=183, DATETIME=184, YEAR=185, 
		CHAR=186, VARCHAR=187, NVARCHAR=188, NATIONAL=189, BINARY=190, VARBINARY=191, 
		TINYBLOB=192, BLOB=193, MEDIUMBLOB=194, LONGBLOB=195, TINYTEXT=196, TEXT=197, 
		MEDIUMTEXT=198, LONGTEXT=199, ENUM=200, VARYING=201, SERIAL=202, EQUAL=203, 
		GREATER=204, LESS=205, NEQ=206, GREATER_EQUAL=207, LESS_EQUAL=208, COMMA=209, 
		S_QUOTE=210, R_QUOTE=211, F_STOP=212, L_BRACKET=213, R_BRACKET=214, START=215, 
		NUMBER=216, ID=217, WS=218;
	public static final int
		RULE_root = 0, RULE_ddlStatement = 1, RULE_createStatement = 2, RULE_createContent = 3, 
		RULE_createTable = 4, RULE_dropStatement = 5, RULE_dropTable = 6, RULE_truncateStatement = 7, 
		RULE_truncateTable = 8, RULE_columnContent = 9, RULE_columnDefineStyle = 10, 
		RULE_columnDefParameters = 11, RULE_dataTypeContent = 12, RULE_primaryKey = 13, 
		RULE_primaryKeyContent = 14, RULE_keys = 15, RULE_foreignKeyContent = 16, 
		RULE_foreignKeyIndex = 17, RULE_foreignKeys = 18, RULE_foreignOnOpChange = 19, 
		RULE_dataType = 20, RULE_number = 21, RULE_ifExists = 22, RULE_ifNotExists = 23, 
		RULE_notNull = 24, RULE_columnName = 25, RULE_foreignKeyName = 26, RULE_referenceTableName = 27, 
		RULE_innerName = 28, RULE_usingBTree = 29, RULE_tableName = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "ddlStatement", "createStatement", "createContent", "createTable", 
			"dropStatement", "dropTable", "truncateStatement", "truncateTable", "columnContent", 
			"columnDefineStyle", "columnDefParameters", "dataTypeContent", "primaryKey", 
			"primaryKeyContent", "keys", "foreignKeyContent", "foreignKeyIndex", 
			"foreignKeys", "foreignOnOpChange", "dataType", "number", "ifExists", 
			"ifNotExists", "notNull", "columnName", "foreignKeyName", "referenceTableName", 
			"innerName", "usingBTree", "tableName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ADD'", "'ALL'", "'ALTER'", "'ALWAYS'", "'ANALYZE'", "'AND'", 
			"'ANY'", "'AS'", "'ASC'", "'AUTO_INCREMENT'", "'BEFORE'", "'BETWEEN'", 
			"'BOTH'", "'BTREE'", "'BY'", "'CALL'", "'CASCADE'", "'CASE'", "'CAST'", 
			"'CHANGE'", "'CHARACTER'", "'CHECK'", "'COLLATE'", "'COLUMN'", "'CONDITION'", 
			"'CONSTRAINT'", "'CONTINUE'", "'CONVERT'", "'CREATE'", "'CROSS'", "'CURRENT_USER'", 
			"'CURSOR'", "'DATABASE'", "'DATABASES'", "'DECLARE'", "'DEFAULT'", "'DELAYED'", 
			"'DELETE'", "'DESC'", "'DESCRIBE'", "'DETERMINISTIC'", "'DISTINCT'", 
			"'DISTINCTROW'", "'DROP'", "'EACH'", "'ELSE'", "'ELSEIF'", "'ENCLOSED'", 
			"'ESCAPED'", "'EXISTS'", "'EXIT'", "'EXPLAIN'", "'FALSE'", "'FETCH'", 
			"'FOR'", "'FORCE'", "'FOREIGN'", "'FROM'", "'FULLTEXT'", "'GENERATED'", 
			"'GRANT'", "'GROUP'", "'HAVING'", "'HIGH_PRIORITY'", "'IF'", "'IGNORE'", 
			"'IN'", "'INDEX'", "'INFILE'", "'INNER'", "'INOUT'", "'INSERT'", "'INTERVAL'", 
			"'INTO'", "'IS'", "'ITERATE'", "'JOIN'", "'KEY'", "'KEYS'", "'KILL'", 
			"'LEADING'", "'LEAVE'", "'LEFT'", "'LIKE'", "'LIMIT'", "'LINEAR'", "'LINES'", 
			"'LOAD'", "'LOCK'", "'LOOP'", "'LOW_PRIORITY'", "'MASTER_BIND'", "'MASTER_SSL_VERIFY_SERVER_CERT'", 
			"'MATCH'", "'MAXVALUE'", "'MODIFIES'", "'NATURAL'", "'NOT'", "'NULL'", 
			"'ON'", "'OPTIMIZE'", "'OPTION'", "'OPTIONALLY'", "'OR'", "'ORDER'", 
			"'OUT'", "'OUTER'", "'OUTFILE'", "'PARTITION'", "'PRIMARY'", "'PROCEDURE'", 
			"'PURGE'", "'RANGE'", "'READ'", "'READS'", "'REFERENCES'", "'REGEXP'", 
			"'RELEASE'", "'RENAME'", "'REPEAT'", "'REPLACE'", "'REQUIRE'", "'RESTRICT'", 
			"'RETURN'", "'REVOKE'", "'RIGHT'", "'RLIKE'", "'SCHEMA'", "'SCHEMAS'", 
			"'SELECT'", "'SET'", "'SEPARATOR'", "'SHOW'", "'SPATIAL'", "'SQL'", "'TABLE'", 
			"'TERMINATED'", "'THEN'", "'TO'", "'TRAILING'", "'TRIGGER'", "'TRUE'", 
			"'TRUNCATE'", "'UNDO'", "'UNION'", "'UNIQUE'", "'UNLOCK'", "'UNSIGNED'", 
			"'UPDATE'", "'USAGE'", "'USE'", "'USING'", "'VALUES'", "'WHEN'", "'WHERE'", 
			"'WHILE'", "'WITH'", "'WRITE'", "'XOR'", "'ZEROFILL'", "'MAX'", "'MIN'", 
			"'COUNT'", "'SUM'", "'AVG'", "'%'", "'_'", "'TINYINT'", "'SMALLINT'", 
			"'MEDIUMINT'", "'INT'", "'INTEGER'", "'BIGINT'", "'REAL'", "'DOUBLE'", 
			"'PRECISION'", "'FLOAT'", "'DECIMAL'", "'DEC'", "'NUMERIC'", "'DATE'", 
			"'TIME'", "'TIMESTAMP'", "'DATETIME'", "'YEAR'", "'CHAR'", "'VARCHAR'", 
			"'NVARCHAR'", "'NATIONAL'", "'BINARY'", "'VARBINARY'", "'TINYBLOB'", 
			"'BLOB'", "'MEDIUMBLOB'", "'LONGBLOB'", "'TINYTEXT'", "'TEXT'", "'MEDIUMTEXT'", 
			"'LONGTEXT'", "'ENUM'", "'VARYING'", "'SERIAL'", "'='", "'>'", "'<'", 
			null, "'>='", "'<='", "','", "'''", "'`'", "'.'", "'('", "')'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ADD", "ALL", "ALTER", "ALWAYS", "ANALYZE", "AND", "ANY", "AS", 
			"ASC", "AUTO_INCREMENT", "BEFORE", "BETWEEN", "BOTH", "BTREE", "BY", 
			"CALL", "CASCADE", "CASE", "CAST", "CHANGE", "CHARACTER", "CHECK", "COLLATE", 
			"COLUMN", "CONDITION", "CONSTRAINT", "CONTINUE", "CONVERT", "CREATE", 
			"CROSS", "CURRENT_USER", "CURSOR", "DATABASE", "DATABASES", "DECLARE", 
			"DEFAULT", "DELAYED", "DELETE", "DESC", "DESCRIBE", "DETERMINISTIC", 
			"DISTINCT", "DISTINCTROW", "DROP", "EACH", "ELSE", "ELSEIF", "ENCLOSED", 
			"ESCAPED", "EXISTS", "EXIT", "EXPLAIN", "FALSE", "FETCH", "FOR", "FORCE", 
			"FOREIGN", "FROM", "FULLTEXT", "GENERATED", "GRANT", "GROUP", "HAVING", 
			"HIGH_PRIORITY", "IF", "IGNORE", "IN", "INDEX", "INFILE", "INNER", "INOUT", 
			"INSERT", "INTERVAL", "INTO", "IS", "ITERATE", "JOIN", "KEY", "KEYS", 
			"KILL", "LEADING", "LEAVE", "LEFT", "LIKE", "LIMIT", "LINEAR", "LINES", 
			"LOAD", "LOCK", "LOOP", "LOW_PRIORITY", "MASTER_BIND", "MASTER_SSL_VERIFY_SERVER_CERT", 
			"MATCH", "MAXVALUE", "MODIFIES", "NATURAL", "NOT", "NULL", "ON", "OPTIMIZE", 
			"OPTION", "OPTIONALLY", "OR", "ORDER", "OUT", "OUTER", "OUTFILE", "PARTITION", 
			"PRIMARY", "PROCEDURE", "PURGE", "RANGE", "READ", "READS", "REFERENCES", 
			"REGEXP", "RELEASE", "RENAME", "REPEAT", "REPLACE", "REQUIRE", "RESTRICT", 
			"RETURN", "REVOKE", "RIGHT", "RLIKE", "SCHEMA", "SCHEMAS", "SELECT", 
			"SET", "SEPARATOR", "SHOW", "SPATIAL", "SQL", "TABLE", "TERMINATED", 
			"THEN", "TO", "TRAILING", "TRIGGER", "TRUE", "TRUNCATE", "UNDO", "UNION", 
			"UNIQUE", "UNLOCK", "UNSIGNED", "UPDATE", "USAGE", "USE", "USING", "VALUES", 
			"WHEN", "WHERE", "WHILE", "WITH", "WRITE", "XOR", "ZEROFILL", "MAX", 
			"MIN", "COUNT", "SUM", "AVG", "PERCENT", "UNDER_LINE", "TINYINT", "SMALLINT", 
			"MEDIUMINT", "INT", "INTEGER", "BIGINT", "REAL", "DOUBLE", "PRECISION", 
			"FLOAT", "DECIMAL", "DEC", "NUMERIC", "DATE", "TIME", "TIMESTAMP", "DATETIME", 
			"YEAR", "CHAR", "VARCHAR", "NVARCHAR", "NATIONAL", "BINARY", "VARBINARY", 
			"TINYBLOB", "BLOB", "MEDIUMBLOB", "LONGBLOB", "TINYTEXT", "TEXT", "MEDIUMTEXT", 
			"LONGTEXT", "ENUM", "VARYING", "SERIAL", "EQUAL", "GREATER", "LESS", 
			"NEQ", "GREATER_EQUAL", "LESS_EQUAL", "COMMA", "S_QUOTE", "R_QUOTE", 
			"F_STOP", "L_BRACKET", "R_BRACKET", "START", "NUMBER", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DdlLangRule.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DdlLangRuleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DdlLangRuleParser.EOF, 0); }
		public DdlStatementContext ddlStatement() {
			return getRuleContext(DdlStatementContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlLangRuleVisitor) return ((DdlLangRuleVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CREATE || _la==DROP || _la==TRUNCATE) {
				{
				setState(62);
				ddlStatement();
				}
			}

			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DdlStatementContext extends ParserRuleContext {
		public CreateStatementContext createStatement() {
			return getRuleContext(CreateStatementContext.class,0);
		}
		public DropStatementContext dropStatement() {
			return getRuleContext(DropStatementContext.class,0);
		}
		public TruncateStatementContext truncateStatement() {
			return getRuleContext(TruncateStatementContext.class,0);
		}
		public DdlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ddlStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlLangRuleVisitor ) return ((DdlLangRuleVisitor<? extends T>)visitor).visitDdlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DdlStatementContext ddlStatement() throws RecognitionException {
		DdlStatementContext _localctx = new DdlStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ddlStatement);
		try {
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				createStatement();
				}
				break;
			case DROP:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				dropStatement();
				}
				break;
			case TRUNCATE:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				truncateStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateStatementContext extends ParserRuleContext {
		public CreateTableContext createTable() {
			return getRuleContext(CreateTableContext.class,0);
		}
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode L_BRACKET() { return getToken(DdlLangRuleParser.L_BRACKET, 0); }
		public List<CreateContentContext> createContent() {
			return getRuleContexts(CreateContentContext.class);
		}
		public CreateContentContext createContent(int i) {
			return getRuleContext(CreateContentContext.class,i);
		}
		public TerminalNode R_BRACKET() { return getToken(DdlLangRuleParser.R_BRACKET, 0); }
		public IfNotExistsContext ifNotExists() {
			return getRuleContext(IfNotExistsContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(DdlLangRuleParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DdlLangRuleParser.COMMA, i);
		}
		public CreateStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlLangRuleVisitor ) return ((DdlLangRuleVisitor<? extends T>)visitor).visitCreateStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateStatementContext createStatement() throws RecognitionException {
		CreateStatementContext _localctx = new CreateStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_createStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			createTable();
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IF) {
				{
				setState(73);
				ifNotExists();
				}
			}

			setState(76);
			tableName();
			setState(77);
			match(L_BRACKET);
			setState(78);
			createContent();
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(79);
				match(COMMA);
				setState(80);
				createContent();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateContentContext extends ParserRuleContext {
		public ColumnContentContext columnContent() {
			return getRuleContext(ColumnContentContext.class,0);
		}
		public PrimaryKeyContentContext primaryKeyContent() {
			return getRuleContext(PrimaryKeyContentContext.class,0);
		}
		public ForeignKeyContentContext foreignKeyContent() {
			return getRuleContext(ForeignKeyContentContext.class,0);
		}
		public CreateContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createContent; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlLangRuleVisitor ) return ((DdlLangRuleVisitor<? extends T>)visitor).visitCreateContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateContentContext createContent() throws RecognitionException {
		CreateContentContext _localctx = new CreateContentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createContent);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case R_QUOTE:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				columnContent();
				}
				break;
			case PRIMARY:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				primaryKeyContent();
				}
				break;
			case CONSTRAINT:
			case INDEX:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				foreignKeyContent();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateTableContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(DdlLangRuleParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(DdlLangRuleParser.TABLE, 0); }
		public CreateTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlLangRuleVisitor ) return ((DdlLangRuleVisitor<? extends T>)visitor).visitCreateTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateTableContext createTable() throws RecognitionException {
		CreateTableContext _localctx = new CreateTableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createTable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(CREATE);
			setState(94);
			match(TABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DropStatementContext extends ParserRuleContext {
		public DropTableContext dropTable() {
			return getRuleContext(DropTableContext.class,0);
		}
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public IfExistsContext ifExists() {
			return getRuleContext(IfExistsContext.class,0);
		}
		public DropStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dropStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlLangRuleVisitor ) return ((DdlLangRuleVisitor<? extends T>)visitor).visitDropStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DropStatementContext dropStatement() throws RecognitionException {
		DropStatementContext _localctx = new DropStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dropStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			dropTable();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IF) {
				{
				setState(97);
				ifExists();
				}
			}

			setState(100);
			tableName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DropTableContext extends ParserRuleContext {
		public TerminalNode DROP() { return getToken(DdlLangRuleParser.DROP, 0); }
		public TerminalNode TABLE() { return getToken(DdlLangRuleParser.TABLE, 0); }
		public DropTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dropTable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlLangRuleVisitor ) return ((DdlLangRuleVisitor<? extends T>)visitor).visitDropTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DropTableContext dropTable() throws RecognitionException {
		DropTableContext _localctx = new DropTableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dropTable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(DROP);
			setState(103);
			match(TABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TruncateStatementContext extends ParserRuleContext {
		public TruncateTableContext truncateTable() {
			return getRuleContext(TruncateTableContext.class,0);
		}
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TruncateStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_truncateStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlLangRuleVisitor ) return ((DdlLangRuleVisitor<? extends T>)visitor).visitTruncateStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TruncateStatementContext truncateStatement() throws RecognitionException {
		TruncateStatementContext _localctx = new TruncateStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_truncateStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			truncateTable();
			setState(106);
			tableName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TruncateTableContext extends ParserRuleContext {
		public TerminalNode TRUNCATE() { return getToken(DdlLangRuleParser.TRUNCATE, 0); }
		public TerminalNode TABLE() { return getToken(DdlLangRuleParser.TABLE, 0); }
		public TruncateTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_truncateTable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlLangRuleVisitor ) return ((DdlLangRuleVisitor<? extends T>)visitor).visitTruncateTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TruncateTableContext truncateTable() throws RecognitionException {
		TruncateTableContext _localctx = new TruncateTableContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_truncateTable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(TRUNCATE);
			setState(109);
			match(TABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnContentContext extends ParserRuleContext {
		public List<ColumnDefineStyleContext> columnDefineStyle() {
			return getRuleContexts(ColumnDefineStyleContext.class);
		}
		public ColumnDefineStyleContext columnDefineStyle(int i) {
			return getRuleContext(ColumnDefineStyleContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DdlLangRuleParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DdlLangRuleParser.COMMA, i);
		}
		public ColumnContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnContent; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlLangRuleVisitor ) return ((DdlLangRuleVisitor<? extends T>)visitor).visitColumnContent(this);
			else return visitor.visitChildren(this);
		}
	}
